# RCO_View

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: RCO_View.plist
firmware/: RCO_Monitor-v1.0.0.rpi  RCO_Monitor.rpi  RCO_Monitor.service
icons/: rco_view.icns  resources.qrc
include/: dialog_firmware_settings.h  rco_view.h  shared_structs.h
src/: dialog_firmware_settings.cpp  main.cpp  rco_view.cpp  shared_structs.cpp
ui/: dialog_firmware_settings.ui  rco_view.ui
